# ihcl-ai-product-manager-portfolio

./: .gitignore  AGENTIC_AI_DEMO_SCRIPT.md  AGENTIC_TRANSFORMATION_SUMMARY.md  DEMO_SCRIPT.md  DEPLOYMENT_STATUS.md  HOW_TO_USE_THIS_PORTFOLIO.md  IHCL-AI-PRODUCT-MANAGER-PORTFOLIO.md  IHCL_INTERVIEW_DEMO_SCRIPT.md  IHCL_INTERVIEW_QA_GUIDE.md  PORTFOLIO_SUMMARY.md  README.md  launch-portfolio.sh
agentops-dashboard/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_web_dashboard.py
agentops-dashboard/config/: prometheus.yml
agentops-dashboard/config/nginx/: nginx.conf
agentops-dashboard/demo_data/: cost_tracking.json  generate_demo_data.py  security_incidents.json
agentops-dashboard/docker/: Dockerfile.api  Dockerfile.dashboard
agentops-dashboard/docs/: ARCHITECTURE.md
agentops-dashboard/scripts/: quick-start.sh
agentops-dashboard/src/alerting/: __init__.py  alert_manager.py
agentops-dashboard/src/api/: __init__.py  main.py
agentops-dashboard/src/api/routes/: __init__.py  alerts.py  audit.py  costs.py  dashboard.py  evaluations.py  executions.py  performance.py  security.py
agentops-dashboard/src/dashboard/: __init__.py  app.py
agentops-dashboard/src/evaluation/: __init__.py  evaluator.py
agentops-dashboard/src/models/: __init__.py  agent_execution.py  alert.py  audit_log.py  base.py  cost_tracking.py  evaluation_result.py  performance_metric.py  security_incident.py
agentops-dashboard/src/schemas/: evaluation_schemas.py  execution_schemas.py  security_schemas.py
agentops-dashboard/src/utils/: __init__.py  config.py  database.py
docs/: deployment-guide.md  evaluation-framework.md  hotel-ops-architecture.md  langgraph-architecture.md  safety-compliance.md  security-incident-prd.md
evaluation-framework/: README.md  demo_live_evaluation.py  pyproject.toml  requirements.txt
evaluation-framework/scripts/: run_evaluation_demo.py
evaluation-framework/src/evaluation_framework/: __init__.py
evaluation-framework/src/evaluation_framework/core/: __init__.py  evaluator.py  framework.py  types.py
evaluation-framework/src/evaluation_framework/datasets/: __init__.py  golden_dataset.py
evaluation-framework/src/evaluation_framework/hallucination/: __init__.py  detector.py
evaluation-framework/src/evaluation_framework/metrics/: __init__.py  evaluation_metrics.py
evaluation-framework/src/evaluation_framework/statistical/: __init__.py  ab_testing.py
hotel-ops-assistant/: .env.example  PROJECT_STRUCTURE.md  README.md  demo_live_operations.py  pyproject.toml  requirements.txt  run_demo.py
hotel-ops-assistant/docs/: PORTFOLIO_SUMMARY.md
hotel-ops-assistant/examples/: demo_scenarios.py
hotel-ops-assistant/src/hotel_ops_assistant/: __init__.py  cli.py
hotel-ops-assistant/src/hotel_ops_assistant/agents/: __init__.py  agent_coordinator.py  base_agent.py  complaint_handler_agent.py  fraud_detection_agent.py  guest_service_agent.py  security_agent.py
hotel-ops-assistant/src/hotel_ops_assistant/api/: __init__.py  main.py  middleware.py  routes.py
hotel-ops-assistant/src/hotel_ops_assistant/compliance/: __init__.py  audit_logger.py  pii_protection.py
hotel-ops-assistant/src/hotel_ops_assistant/core/: config.py
hotel-ops-assistant/src/hotel_ops_assistant/models/: __init__.py  base.py  guest.py  incident.py
hotel-ops-assistant/src/hotel_ops_assistant/services/: __init__.py  compliance_service.py  hotel_systems.py
hotel-ops-assistant/tests/: test_api.py
my-telecom-ai-agent/: HINDI_VOICE_TEST_GUIDE.md  QUICK_START.md  README.md  UI_UX_UPGRADE_SUMMARY.md  demo_telecom_agent.py  requirements.txt  start_demo.py  web_app 2.py  web_app.py
my-telecom-ai-agent/docs/: ARCHITECTURE.md
my-telecom-ai-agent/project-documentation/: product-manager-output.md  system-architecture.md
security-operations-nextjs/: package-lock.json  package.json
security-operations-nextjs/src/app/: layout.tsx  page.tsx
security-operations-nextjs/src/components/: animated-card.tsx  security-command-palette.tsx  security-operations-dashboard.tsx
security-triage-agent/: .env.example  AGENTIC_AI_ARCHITECTURE.md  AGENTIC_AI_DEMO_SCRIPT.md  AGENTIC_AI_TRANSFORMATION_SUMMARY.md  DEPLOYMENT_ARCHITECTURE.md  README.md  demo_agent_live.py  demo_agentic_live.py  demo_simple.py  pyproject.toml  requirements.txt  run_agentic_demo.sh
security-triage-agent/config/: development.json  production.json
security-triage-agent/examples/: demo_security_triage.py
security-triage-agent/src/security_triage_agent/: __init__.py
security-triage-agent/src/security_triage_agent/autonomous/: decision_engine.py
security-triage-agent/src/security_triage_agent/business/: impact_tracker.py
security-triage-agent/src/security_triage_agent/core/: agent.py  agentic_workflow.py  state.py  workflow.py
security-triage-agent/src/security_triage_agent/evaluation/: __init__.py  agentic_evaluator.py  benchmarks.py  evaluator.py  metrics_tracker.py
security-triage-agent/src/security_triage_agent/memory/: __init__.py  memory_retriever.py  persistent_storage.py  session_manager.py
security-triage-agent/src/security_triage_agent/rag/: knowledge_base.py
security-triage-agent/src/security_triage_agent/tools/: __init__.py  classification.py  compliance_checker.py  hotel_management_tools.py  playbook_selector.py  prioritization.py  response_generator.py  safety_guardrails.py
security-triage-agent/src/security_triage_agent/utils/: __init__.py  config.py  logger.py
security-triage-agent/tests/: __init__.py  conftest.py
telecom-ai-nextjs/: EDGE_TTS_TAKUMI_INTEGRATION_COMPLETE.md  ELEVENLABS_VOICE_SETUP.md  FINAL_UI_SCROLLING_FIX.md  README_DEMO.md  UI_FIXES_AND_ENHANCED_VOICES_UPDATE.md  VOICE_ENHANCEMENT_GUIDE.md  package-lock.json  package.json
telecom-ai-nextjs/src/app/: layout.tsx  page.tsx
telecom-ai-nextjs/src/components/: command-palette.tsx  telecom-ai-agent.tsx
telecom-ai-nextjs/src/lib/: takumi-renderer.ts
telecom-ai-nextjs/src/types/: speech.d.ts
virtualagent-platform-dashboard/: README.md  package-lock.json  package.json
(+22 files in other folders)
